tests/NormalTests/paczka1/fuzzy1/17500036.err
Error in line 1: dyZLIih S116 8,0
Error in line 7: zkF4C5k9 S101 76,5
Error in line 17: S102 S609 93,2
Error in line 29: lbnmsMx S116 51,1
Error in line 10: D5vi S609 238,4
